<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.myexample.timerproject3.MainActivity" >

	<ImageView
	    android:id="@+id/test_image"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/timer2"
	    android:layout_alignRight="@+id/stop"
	    android:layout_below="@+id/timer2"
	    android:src="@drawable/images" 
	    android:contentDescription="@string/image"/>

	<Button
	    android:id="@+id/timer1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/time_elapsed"
	    android:text="@string/timer_one" />

	<Button
	    android:id="@+id/timer2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/timer1"
	    android:layout_below="@+id/timer1"
	    android:text="@string/timer_two" />

	<Button
	    android:id="@+id/stop"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/timer1"
	    android:layout_toRightOf="@+id/timer2"
	    android:text="@string/stop" />

	<TextView
	    android:id="@+id/time_remaining"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/timer1"
	    android:layout_alignParentTop="true"
	    android:layout_marginTop="15dp"
	    android:text="@string/time_remaining" />

	<TextView
	    android:id="@+id/time_elapsed"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/timer1"
	    android:layout_below="@+id/time_remaining"
	    android:text="@string/time_elapsed" />

</RelativeLayout>